last last last commit to make sure everything is aligned.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   text-transform: uppercase;
   color: white;
   font-size: 64px;
+  margin-left: 40px;
 }
 
 /* General CSS */
